mock-exams/gateway/01-gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gateway-example-class
spec:
  controllerName: example.com/gateway-controller
